--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html>
 <body>
 <h1>Maria´s portfolio</h1>
-<p>Hosted with GitHub Pages!</p>
+<p>Education:
+ 
+2013-ongoing
+Kungliga Tekniska Högskolan
+Degree in civil engineering in media technology 300 hp1
+  
+2012
+Kungliga Tekniska Högskolan
+Year in technical basics
+
+2008-2011
+Djurgymnasiet Stockholm
+Upper secondary school 
+Program in agriculture orientation pets, dogs
+
+  </p>
 </body>
 </html>
