--- a/index.html
+++ b/index.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<meta charset="UTF-8">
+</head>
 <body>
-<h1>Maria´s portfolio</h1>
-<p>Education:
- 
-2013-ongoing
-Kungliga Tekniska Högskolan
-Degree in civil engineering in media technology 300 hp1
-  
-2012
-Kungliga Tekniska Högskolan
-Year in technical basics
+<h1>Maria's portfolio</h1>
+<a href="//marresaurus.github.io/education.html">Education</a>
 
-2008-2011
-Djurgymnasiet Stockholm
-Upper secondary school 
-Program in agriculture orientation pets, dogs
-
-  </p>
 </body>
 </html>
