created more links

--- a/education.html
+++ b/education.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<head>
+	<meta charset="UTF-8">
+<body>
 <h1>Education </h1>
 
 <p>
@@ -15,3 +19,5 @@ Upper secondary school
 Program in agriculture orientation pets, dogs
 
 </p>
+
+</body></head>
