--- a/education.html
+++ b/education.html
@@ -7,7 +7,7 @@
 <p>
 2013-ongoing
 Kungliga Tekniska Högskolan
-Degree in civil engineering in media technology 300 hp1
+Degree in civil engineering in media technology 300 hp
   
 2012
 Kungliga Tekniska Högskolan
