--- a/work.html
+++ b/work.html
@@ -5,5 +5,106 @@
 <h1>
 Work experience
 </h1>
+<p>
+
+2017 jun-2018 jul
+THS president
+
+2009 may-2017 jun
+Animallogos AB, Djurgymnasiet Stockholm
+Animal caretaker and animal instructor
+As a caretaker and instructor I got to take care about the animals at the school as well as instruct the students in animal care. Here I learnt about taking responsibility but also about supervising and instructing as well as working closely with people during a longer period.
+2017 Feb-Jun
+Kungliga Tekniska Högskolan
+Course assistant DM2578
+As the course assistant I have so far been working closely with the course coordinator in rebuilding the course since there has been a lot of complains from the students about the structure and the content. Later on I will also do administrative work. I got this assignment since I last year as the president of our chapters study committee got a lot of experience in what students think about the course and what could be improved.
+2016 Aug-Oct
+Kungliga Tekniska Högskolan
+Course assistant DM1572
+As a course assistant I was responsible for the communication with students and guest lecturers. To work closely with students during their first course at KTH has given me an insight in how our new students think and what they focus on but also how different we all are.
+2009 Jun-Aug
+Jeanettes hunddagis
+Animal caretaker
+During the summer I worked at a doggy daycare and worked alone with around 10 dogs. This was one of my first real jobs and I got to know a bit about customer service and since I worked by myself, I got to practice on supervising myself and taking my own initiatives.
+</p>
+
+<p>
+Elected assignments
+2019
+
+2017 jul-2018 jun
+Stockholms studentkårers centralorganisation
+Styrelseledamot, suppleant
+2017 jul-2019 jun
+Kungliga tekniska Högskolan
+Studentrepresentant i Universitetsstyrelsen
+
+2016 Jul-2017 Jun
+Chapter of Media Technology
+President
+As the president I work closely with and supervises our chapter board and together we work with strategical questions regarding the chapter. I have learnt a lot about leadership as well as about representation.
+2016 Sep-2017 Jun
+Tekniska Högskolans Studentkår
+Leader of the election commission 
+Here it is my job to supervise the representatives of the election commision but also spread knowledge about the student union council (KF). Already on my second council meeting we had filled all spots in the election commission, something that had not been done in a long time.
+2016 Jul-2017 Jun
+Kungliga Tekniska Högskolan, CSC-school
+CSC strategical council, ordinary student representative
+Here we discuss strategical questions about CSC and my job is to bring the student perspective to the table.
+2016 Jul-2017 Jun
+Tekniska Högskolans Studentkår
+Student union council (KF), deputy member
+Sitting in KF has given me a great insight into THS’ central work and the reason I chose to sit as a deputy this year has been to be a support to my chapter’s new ordinare members.
+
+
+2015 Jul-2016 Jun
+Tekniska Högskolans Studentkår
+Student union council (KF), ordinary member
+During my first year I learnt a lot about formalities but it also gave me a greater insight into what THS Central does and what you can do at THS central.
+2015 Jul-2016 Jun
+Chapter of Media Technology
+President of the study committee (SNO)
+As SNO I led the education advocacy at the program and it was also the first time I officially led a group and I worked a lot with getting a sustainable and continuable operation. A great experience I have gotten from this work is to in a diplomatic way communicate with KTH meanwhile the students opinions are brought forward. 
+2015 Jul-2016 Jun
+Chapter of Media Technology
+Chapter hall Supervisor
+I did this at the same time as I was SNO and exactly as in that mission I really developed as a leader and also learnt about how to in a sustainable way delegate work to the rest of the group.
+2015 Jul-2016 Jun
+Kungliga Tekniska Högskolan, CSC-skolan
+CSC Board of directors and the Board of directors for undergraduates, deputy student representative
+In these councils we discuss CSC and as a deputy I sometimes stepped in and got to bring a student perspective in the questions that were discussed.
+2014 Jul-2016 Jun
+Tekniska Högskolans Studentkår
+Representative in the election commission, Media
+As a member of the election commission I worked with spreading information about KF to my chapter and it has given me insights and experience in how to integrate THS Local and THS Central more and what obstacles there can be.
+2013 Oct - 2014 Dec
+Chapter of Media Technology
+Member of the nomination committee
+I interviewed the chapters candidates for the elections and this was my first experience being elected.
+
+Other assignments (a selection)
+
+2013 Sep-2015 Jun
+Chapter of Media Technology
+“The chapter party group” MKM
+I worked with parties (gasquer) and pubs and developed my 
+interpersonal skills but also my endurance capacity and stress management.
+2015 & 2016
+Chapter of Media Technology
+Buddy during the reception
+During the first year I was at the dark side and learnt about 
+delicacy but also about going all-in. During my second year I was at the light side and there I worked with documenting in different kinds of medias. Especially during that year I showed myself what capacity I have for learning new things but also about constructively communicate in a group. 
+2015
+Chapter of Media Technology
+Responsible for event in the  project group for the business fair
+I was in the group that organised the dinner after fair but was also involved in recruitment of companies. Something it really taught me was dealing with unforeseen events and acting fast according to the new circumstances. 
+2013 Sep-2016 Jun
+Chapter of Media Technology
+Class responsible student (KAS)
+As KAS my job was to keep in contact with the course responsible and communicate the students opinions. Early on I learnt to stand by my opinion but also in some cases mediate between students and faculty.   
+
+
+
+</p>
 </body>
 </head>
