--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <a href="//marresaurus.github.io/projects.html">Projects</a>
 <a href="//marresaurus.github.io/education.html">Education</a>
 <a href="//marresaurus.github.io/work.html">Work experience</a>
+<a href="//marresaurus.github.io/volunteer.html">Volunteer work </a>
+
 
 
 </body>
