--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8">
 <body>
-	
+<a href="https://github.com/marresaurus/dinnerplanner-html">Dinner planner </a>
 </body>	
 
 </head>
