added links in project

--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,11 @@
 <head>
 <meta charset="UTF-8">
 <body>
-<a href="https://github.com/marresaurus/dinnerplanner-html">Dinner planner </a>
-</body>	
+<a href="https://github.com/clonnkth/dinnerplanner-html">Dinner planner </a>
+<a href="https://github.com/maxhakka/BattleNub">BattleNub </a>
+<a href="https://github.com/marresaurus/mobil">Chuck Norris generator </a>
+
+
+</body>
 
 </head>
