more stoff added

--- a/volunteer.html
+++ b/volunteer.html
@@ -7,14 +7,16 @@
 <h1>Volunteer work</h1>
 <p>
 Elected assignments
-2019
+2018-2019 Kårstyrelsen
+2019- Vice fanbärare
+2018-2019 THS valnämnd
 
-2017 jul-2018 jun
-Stockholms studentkårers centralorganisation
-Styrelseledamot, suppleant
 2017 jul-2019 jun
 Kungliga tekniska Högskolan
 Studentrepresentant i Universitetsstyrelsen
+2017 jul-2018 jun
+Stockholms studentkårers centralorganisation
+Styrelseledamot, suppleant
 
 2016 Jul-2017 Jun
 Chapter of Media Technology
