--- a/volunteer.html
+++ b/volunteer.html
@@ -6,14 +6,14 @@
 <body>
 <h1>Volunteer work</h1>
 <p>
-Elected assignments
-2018-2019 Kårstyrelsen
-2019- Vice fanbärare
-2018-2019 THS valnämnd
+<h2>Elected assignments</h2>
+<h3>2018-2019 Kårstyrelsen</h3>
+<h3>2019 Vice fanbärare Medietekik</h3>
+<h3>2018-2019 THS valnämnd</h3>
 
-2017 jul-2019 jun
-Kungliga tekniska Högskolan
-Studentrepresentant i Universitetsstyrelsen
+<h3>2017 jul-2019 jun<h3>
+<p>Kungliga tekniska Högskolan
+Studentrepresentant i Universitetsstyrelsen</p>
 2017 jul-2018 jun
 Stockholms studentkårers centralorganisation
 Styrelseledamot, suppleant
