--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-<h1>Maria's portfolio</h1>
-<a href="//marresaurus.github.io/projects.html">Projects</a>
-<a href="//marresaurus.github.io/education.html">Education</a>
-<a href="//marresaurus.github.io/work.html">Work experience</a>
-<a href="//marresaurus.github.io/volunteer.html">Volunteer work </a>
-
+	<h1>Maria's portfolio</h1>
+	<div>
+		<a href="//marresaurus.github.io/projects.html">Projects</a>
+				<a href="//marresaurus.github.io/education.html">Education</a>
+		<a href="//marresaurus.github.io/work.html">Work experience</a>
+		<a href="//marresaurus.github.io/volunteer.html">Volunteer work </a>
+	<div>
 </body>
 </html>
