--- a/volunteer.html
+++ b/volunteer.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Volunteer work</h1>
-<p>
+
 <h2>Elected assignments</h2>
 <h3>2018-2019 Kårstyrelsen</h3>
 <h3>2019 Vice fanbärare Medietekik</h3>
@@ -14,8 +14,8 @@
 <h3>2017 jul-2019 jun<h3>
 <p>Kungliga tekniska Högskolan
 Studentrepresentant i Universitetsstyrelsen</p>
-2017 jul-2018 jun
-Stockholms studentkårers centralorganisation
+<h3>2017 jul-2018 jun</h3>
+<p>Stockholms studentkårers centralorganisation
 Styrelseledamot, suppleant
 
 2016 Jul-2017 Jun
@@ -61,7 +61,7 @@ Chapter of Media Technology
 Member of the nomination committee
 I interviewed the chapters candidates for the elections and this was my first experience being elected.
 
-Other assignments (a selection)
+<h2>Other assignments (a selection)</h2>
 
 2013 Sep-2015 Jun
 Chapter of Media Technology
