--- a/volunteer.html
+++ b/volunteer.html
@@ -4,24 +4,22 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-<h1>Volunteer work</h1>
+	<h1>Volunteer work</h1>
+		<h2>Elected assignments</h2>
+			<h3>2018-2019 Kårstyrelsen</h3>
+			<h3>2019 Vice fanbärare Medietekik</h3>
+			<h3>2018-2019 THS valnämnd</h3>
+			<h3>2017 jul-2019 jun<h3>
+				<p>Kungliga tekniska Högskolan
+				Studentrepresentant i Universitetsstyrelsen</p>
+			<h3>2017 jul-2018 jun</h3>
+				<p>Stockholms studentkårers centralorganisation
+				Styrelseledamot, suppleant
 
-<h2>Elected assignments</h2>
-<h3>2018-2019 Kårstyrelsen</h3>
-<h3>2019 Vice fanbärare Medietekik</h3>
-<h3>2018-2019 THS valnämnd</h3>
-
-<h3>2017 jul-2019 jun<h3>
-<p>Kungliga tekniska Högskolan
-Studentrepresentant i Universitetsstyrelsen</p>
-<h3>2017 jul-2018 jun</h3>
-<p>Stockholms studentkårers centralorganisation
-Styrelseledamot, suppleant
-
-2016 Jul-2017 Jun
-Chapter of Media Technology
-President
-As the president I work closely with and supervises our chapter board and together we work with strategical questions regarding the chapter. I have learnt a lot about leadership as well as about representation.
+			<h3>2016 Jul-2017 Jun</h3>
+				<p>Chapter of Media Technology</p>
+				<p>President</p>
+				<p>As the president I work closely with and supervises our chapter board and together we work with strategical questions regarding the chapter. I have learnt a lot about leadership as well as about representation.</p>
 2016 Sep-2017 Jun
 Tekniska Högskolans Studentkår
 Leader of the election commission 
@@ -56,7 +54,7 @@ In these councils we discuss CSC and as a deputy I sometimes stepped in and got 
 Tekniska Högskolans Studentkår
 Representative in the election commission, Media
 As a member of the election commission I worked with spreading information about KF to my chapter and it has given me insights and experience in how to integrate THS Local and THS Central more and what obstacles there can be.
-2013 Oct - 2014 Dec
+2013 Oct - 2014 Decd
 Chapter of Media Technology
 Member of the nomination committee
 I interviewed the chapters candidates for the elections and this was my first experience being elected.
