--- a/education.html
+++ b/education.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
+</head>
 <body>
 <h1>Education </h1>
 
 <p>
-2013-ongoing
-Kungliga Tekniska Högskolan
-Degree in civil engineering in media technology 300 hp
+<h3>2013-2017, 2018-2020 Kungliga Tekniska Högskolan</h3>
+<p>Degree in civil engineering in media technology 300 hp</p>
   
-2012
-Kungliga Tekniska Högskolan
-Year in technical basics
+<h3>2012 Kungliga Tekniska Högskolan</h3>
+<p>Year in technical basics</p>
 
-2008-2011
-Djurgymnasiet Stockholm
-Upper secondary school 
-Program in agriculture orientation pets, dogs
+<h3>2008-2011 Djurgymnasiet Stockholm</h3>
+<p>Upper secondary school</p>
+<p>Program in agriculture orientation pets, dogs</p>
 
 </p>
 
-</body></head>
+</body>
