--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Maria's portfolio</h1>
-	<div>
+	<div align="right">
 		<a href="//marresaurus.github.io/projects.html">Projects</a>
 				<a href="//marresaurus.github.io/education.html">Education</a>
 		<a href="//marresaurus.github.io/work.html">Work experience</a>
