--- a/education.html
+++ b/education.html
@@ -5,6 +5,8 @@
 <body>
 <h1>Education </h1>
 
+<h2>Degrees</h2>
+
 <p>
 <h3>2013-2017, 2018-2020 Kungliga Tekniska Högskolan</h3>
 <p>Degree in civil engineering in media technology 300 hp</p>
@@ -14,7 +16,14 @@
 
 <h3>2008-2011 Djurgymnasiet Stockholm</h3>
 <p>Upper secondary school</p>
-<p>Program in agriculture orientation pets, dogs</p>
+<p>Program in agriculture orientation pets, dogs.</p>
+<p>Examinated animal caretaker.</p> 
+<p>ZOORF L80 certificates for ground course, fish and amphibians, birds, rodents and rabbits, and reptiles.</p>
+
+
+<h2>Courses</h2>
+<a href="https://www.arbetsgivaralliansen.se/utbildning/arbetsratt-for-arbetsgivare2/>Arbetsrätt för arbetsgivare"> 2017 28-29 sept Arbetsrätt för arbetsgivare</a>
+<a href="https://www.arbetsgivaralliansen.se/utbildning/lonesattning-och-lonesamtal/"> 2017 5 maj Lönesättning och lönesamtal</a>
 
 </p>
 
