--- a/work.html
+++ b/work.html
@@ -9,19 +9,19 @@ Work experience
 <p>
 
 	<h3>2019-2019 Project Manager</h3>
-		<p>Student conference NORDTEK 2019</p>
+		<p>Student conference NORDTEK 2019 at Kungliga Tekniska Högskolan</p>
 	<h3>2017 jun-2018 jul THS president</h3>
-	<h3>2009 may-2017 jun Animallogos AB, Djurgymnasiet Stockholm</h3>
-		<p>Animal caretaker and animal instructor</p>
+	<h3>2009 may-2017 jun Animal caretaker and on-call instructor</h3>
+		<p>Animallogos AB, Djurgymnasiet Stockholm</p>
 		<p>As a caretaker and instructor I got to take care about the animals at the school as well as instruct the students in animal care. Here I learnt about taking responsibility but also about supervising and instructing as well as working closely with people during a longer period.</p>
-	<h3>2017 Feb-Jun´Kungliga Tekniska Högskolan </h3>
-		<p>Course assistant DM2578</p>
-		<p>As the course assistant I have so far been working closely with the course coordinator in rebuilding the course since there has been a lot of complains from the students about the structure and the content. Later on I will also do administrative work. I got this assignment since I last year as the president of our chapters study committee got a lot of experience in what students think about the course and what could be improved.</p>
-	<h3>2016 Aug-Oct Kungliga Tekniska Högskolan </h3>
-		<p>Course assistant DM1572</p>
-		<p>As a course assistant I was responsible for the communication with students and guest lecturers. To work closely with students during their first course at KTH has given me an insight in how our new students think and what they focus on but also how different we all are.</p>
-	<h3>2009 Jun-Au Jeanettes hunddagis</h3>
-		<p>Animal caretaker</p>
+	<h3>2017 Feb-Jun Course assistant </h3>
+		<p>Kungliga Tekniska Högskolan</p>
+		<p>As the course assistant in the course DM2578 I have so far been working closely with the course coordinator in rebuilding the course since there has been a lot of complains from the students about the structure and the content. Later on I will also do administrative work. I got this assignment since I last year as the president of our chapters study committee got a lot of experience in what students think about the course and what could be improved.</p>
+	<h3>2016 Aug-Oct Course assistant</h3>
+		<p>Kungliga Tekniska Högskolan</p>
+		<p>As a course assistant in the course DM1572 I was responsible for the communication with students and guest lecturers. To work closely with students during their first course at KTH has given me an insight in how our new students think and what they focus on but also how different we all are.</p>
+	<h3>2009 Jun-Aug Animal caretaker</h3>
+		<p>Jeanettes hunddagis</p>
 		<p>During the summer I worked at a doggy daycare and worked alone with around 10 dogs. This was one of my first real jobs and I got to know a bit about customer service and since I worked by myself, I got to practice on supervising myself and taking my own initiatives.</p>
 </p>
 
