--- a/education.html
+++ b/education.html
@@ -22,8 +22,8 @@
 
 
 <h2>Courses</h2>
-<a href="https://www.arbetsgivaralliansen.se/utbildning/arbetsratt-for-arbetsgivare2/>Arbetsrätt för arbetsgivare"> 2017 28-29 sept Arbetsrätt för arbetsgivare</a>
-<a href="https://www.arbetsgivaralliansen.se/utbildning/lonesattning-och-lonesamtal/"> 2017 5 maj Lönesättning och lönesamtal</a>
+<p><a href="https://www.arbetsgivaralliansen.se/utbildning/arbetsratt-for-arbetsgivare2/>Arbetsrätt för arbetsgivare"> 2017 28-29 sept Arbetsrätt för arbetsgivare</a></p>
+<p><a href="https://www.arbetsgivaralliansen.se/utbildning/lonesattning-och-lonesamtal/"> 2017 5 maj Lönesättning och lönesamtal</a></p>
 
 </p>
 
