--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-	<h1>Maria's portfolio</h1>
-	<div align="right">
-		<a href="//marresaurus.github.io/projects.html">Projects</a>
-		<a href="//marresaurus.github.io/education.html">Education</a>
-		<a href="//marresaurus.github.io/work.html">Work experience</a>
-		<a href="//marresaurus.github.io/volunteer.html">Volunteer work </a>
+	<div style="background-color: lightpurple">
+		<h1>Maria's portfolio</h1>
+		<div align="right">
+			<a href="//marresaurus.github.io/projects.html">Projects</a>
+			<a href="//marresaurus.github.io/education.html">Education</a>
+			<a href="//marresaurus.github.io/work.html">Work experience</a>
+			<a href="//marresaurus.github.io/volunteer.html">Volunteer work </a>
+		</div>
 	<div>
 </body>
 </html>
