--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-	<div style="background-color: lightpurple">
+	<div style="background-color: #AA78A6">
 		<h1>Maria's portfolio</h1>
 		<div align="right">
 			<a href="//marresaurus.github.io/projects.html">Projects</a>
