--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div style="background-color: #AA78A6">
+	<div class="nav">
 		<h1>Maria's portfolio</h1>
 		<div align="right">
 			<a href="//marresaurus.github.io/projects.html">Projects</a>
