--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 	<div class="nav">
-		<h1>Maria's portfolio</h1>
+		<div align="left">
+			<h1>Maria Bahrami</h1>
+		</div>
 		<div align="right">
 			<a href="//marresaurus.github.io/projects.html">Projects</a>
 			<a href="//marresaurus.github.io/education.html">Education</a>
