--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div align="left">
 			<h1>Maria Bahrami</h1>
 		</div>
-		<div align="right">
+		<div align="right" font-size="150%">
 			<a href="//marresaurus.github.io/projects.html">Projects</a>
 			<a href="//marresaurus.github.io/education.html">Education</a>
 			<a href="//marresaurus.github.io/work.html">Work experience</a>
