--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 	<div class="nav">
-		<div align="left">
+		<div float="left">
 			<h1>Maria Bahrami</h1>
 		</div>
-		<div align="right" font-size="150%">
+		<div float="right">
 			<a href="//marresaurus.github.io/projects.html">Projects</a>
 			<a href="//marresaurus.github.io/education.html">Education</a>
 			<a href="//marresaurus.github.io/work.html">Work experience</a>
