--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
+<p>
 <a href="https://github.com/clonnkth/dinnerplanner-html">Dinner planner </a>
-<a href="https://github.com/maxhakka/BattleNub">BattleNub </a>
+Made in the course "DH2642 Interaction Programming and the Dynamic Web" together with Caroline Lönn </p>
+<p>
 <a href="https://github.com/marresaurus/mobil">Chuck Norris generator </a>
+Made in the course "DH2642 Interaction Programming and the Dynamic Web" together with Caroline Lönn, Fredrik Spansk and Axel Hultman.
+</p>
+<p>
+<a href="https://github.com/maxhakka/BattleNub">BattleNub </a> 
+Made in the course "DM2518 Mobile Development with Web Technologies" together with MAx Häkkä and Ah Zau Marang.
+</p>
 
 
 </body>
