--- a/volunteer.html
+++ b/volunteer.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
 	<h1>Volunteer work</h1>
