--- a/work.html
+++ b/work.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" type="text/css" href="style.css">
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
 <h1>
