--- a/projects.html
+++ b/projects.html
@@ -2,10 +2,11 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">l
 </head>
 <body>
 <p>
+<img src="dinnerplanner.png" alt="Dinnerplanner">	
 <a href="https://github.com/clonnkth/dinnerplanner-html">Dinner planner </a>
 Made in the course "DH2642 Interaction Programming and the Dynamic Web" together with Caroline Lönn </p>
 <p>
@@ -13,6 +14,7 @@ Made in the course "DH2642 Interaction Programming and the Dynamic Web" together
 Made in the course "DH2642 Interaction Programming and the Dynamic Web" together with Caroline Lönn, Fredrik Spansk and Axel Hultman.
 </p>
 <p>
+	<img src="battlenub.png" alt="BattleNub">
 <a href="https://github.com/maxhakka/BattleNub">BattleNub </a> 
 Made in the course "DM2518 Mobile Development with Web Technologies" together with MAx Häkkä and Ah Zau Marang.
 </p>
