--- a/projects.html
+++ b/projects.html
@@ -6,17 +6,19 @@
 </head>
 <body>
 <p>
-<img src="dinnerplanner.png" alt="Dinnerplanner">	
+<img src="dinnerplanner.png" alt="Dinnerplanner" width="40%">	
 <a href="https://github.com/clonnkth/dinnerplanner-html">Dinner planner </a>
-Made in the course "DH2642 Interaction Programming and the Dynamic Web" together with Caroline Lönn </p>
+Made in the course "DH2642 Interaction Programming and the Dynamic Web" together with Caroline Lönn. The first part of the course was to develop a responsive website using JavaScript, HTML and CSS with the Model-View-Controller framework.</p>
 <p>
+
 <a href="https://github.com/marresaurus/mobil">Chuck Norris generator </a>
-Made in the course "DH2642 Interaction Programming and the Dynamic Web" together with Caroline Lönn, Fredrik Spansk and Axel Hultman.
+Made in the course "DH2642 Interaction Programming and the Dynamic Web" together with Caroline Lönn, Fredrik Spansk and Axel Hultman. This was the project part of the course, also using the Model-View-Controller framework. I worked mostly with the view and controller using Javascript, HTML and CSS.
 </p>
+
 <p>
 	<img src="battlenub.png" alt="BattleNub">
-<a href="https://github.com/maxhakka/BattleNub">BattleNub </a> 
-Made in the course "DM2518 Mobile Development with Web Technologies" together with MAx Häkkä and Ah Zau Marang.
+<a href="https://github.com/maxhakka/BattleNub"> BattleNub </a> 
+Made in the course "DM2518 Mobile Development with Web Technologies" together with Max Häkkä and Ah Zau Marang. This was the final project in the course and where we used <a href="https://www.pubnub.com/">PubNub <a> I worked as the project manager and with the front end.
 </p>
 
 
