--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 			<a href="//marresaurus.github.io/work.html">Work experience</a>
 			<a href="//marresaurus.github.io/volunteer.html">Volunteer work </a>
 		</div>
-	<div>
+	</div>
 </body>
 </html>
