--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,17 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">l
 </head>
 <body>
+	<div class="nav">
+		<div float="left">
+			<h1>Maria Bahrami</h1>
+		</div>
+		<div float="right">
+			<a href="//marresaurus.github.io/projects.html">Projects</a>
+			<a href="//marresaurus.github.io/education.html">Education</a>
+			<a href="//marresaurus.github.io/work.html">Work experience</a>
+			<a href="//marresaurus.github.io/volunteer.html">Volunteer work </a>
+		</div>
+	</div>	
 	<div>
 		<img src="dinnerplanner.png" alt="Dinnerplanner" width="30%">	
 		<a href="https://github.com/clonnkth/dinnerplanner-html">Dinner planner </a>
