--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,15 @@
 		Made 2015 in the course "DH2642 Interaction Programming and the Dynamic Web" together with Caroline Lönn, Fredrik Spansk and Axel Hultman. This was the project part of the course, also using the Model-View-Controller framework. I worked mostly with the view and controller using Javascript, HTML and CSS.
 		</p>
 	</div>
+	<div>
+		<a href="http://xml.csc.kth.se/~sharong/DM2517/projekt/start.html">Course evaluation </a>
+		<p>
+			Made in 2014 in the course "DM2517 XML for publishing" together with Sharon Ghebremikael. This was the final project and was made with XML, PHP, XSLT, HTML, CSS
+		</p>
+	</div>
+		<a href="//marresaurus.github.io/perception/index.html">The test</a>
+
+	</div>
 
 </body>
 
