--- a/projects.html
+++ b/projects.html
@@ -6,16 +6,10 @@
 </head>
 <body>
 	<div>
-		<img src="dinnerplanner.png" alt="Dinnerplanner" width="40%">	
-		<a href="https://github.com/clonnkth/dinnerplanner-html">Dinner planner </a>
+		<img src="battlenub.png" alt="BattleNub">
 		<p>
-			Made 2015 in the course "DH2642 Interaction Programming and the Dynamic Web" together with Caroline Lönn. The first part of the course was to develop a responsive website using JavaScript, HTML and CSS with the Model-View-Controller framework.
-		</p>
-	</div>
-
-	<div>
-		<img src="battlenub.png" alt="BattleNub" width="40%">
 		<a href="https://github.com/maxhakka/BattleNub"> BattleNub </a> 
+		</p>
 		<p>
 		Made 2015 in the course "DM2518 Mobile Development with Web Technologies" together with Max Häkkä and Ah Zau Marang. This was the final project in the course and where we used 
 			<a href="https://www.pubnub.com/">PubNub </a> 
@@ -23,20 +17,34 @@
 		</p>
 	</div>
 	<div>
-		<a href="https://github.com/marresaurus/mobil">Chuck Norris generator </a>
+		<img src="dinnerplanner.png" alt="Dinnerplanner">	
+		<p>
+			<a href="https://github.com/clonnkth/dinnerplanner-html">Dinner planner</a>
+		</p>
+		<p>
+			Made 2015 in the course "DH2642 Interaction Programming and the Dynamic Web" together with Caroline Lönn. The first part of the course was to develop a responsive website using JavaScript, HTML and CSS with the Model-View-Controller framework. To learn as much as possible, since this was the first time working with Javascript, we both worked with all parts of the development.
+		</p>
+	</div>
+	
+	<div>
+		<p>
+			<img src="cn.png" alt="Chuck Norris">	
+			<a href="https://github.com/marresaurus/mobil">Chuck Norris joke generator </a>
+		</p>
 		<p>
 		Made 2015 in the course "DH2642 Interaction Programming and the Dynamic Web" together with Caroline Lönn, Fredrik Spansk and Axel Hultman. This was the project part of the course, also using the Model-View-Controller framework. I worked mostly with the view and controller using Javascript, HTML and CSS.
 		</p>
 	</div>
 	<div>
-		<a href="http://xml.csc.kth.se/~sharong/DM2517/projekt/start.html">Course evaluation </a>
+		<img src="courseev.png" alt="Course evaluation">	
 		<p>
-			Made in 2014 in the course "DM2517 XML for publishing" together with Sharon Ghebremikael. This was the final project and was made with XML, PHP, XSLT, HTML, CSS
+			<a href="http://xml.csc.kth.se/~sharong/DM2517/projekt/start.html">Course evaluation </a>
+		</p>
+		<p>
+			Made in 2014 in the course "DM2517 XML for publishing" together with Sharon Ghebremikael. This was the final project and was made with PHP, XML, XSLT, HTML, CSS. To learn as much as possible, since this was the first time working with these languages, we both worked with all parts of the development.
 		</p>
 	</div>
-		<a href="//marresaurus.github.io/perception/index.html">The test</a>
 
-	</div>
 
 </body>
 
