under contruction text added

--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
 			<a href="//marresaurus.github.io/volunteer.html">Volunteer work </a>
 		</div>
 	</div>
+	<div>
+		<p> Under construction, for online portfolio for DM2679 go to 
+			<a href="//marresaurus.github.io/projects.html">Projects</a>
+		</p>
+	</div>
 </body>
 </html>
