--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">l
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
 	<div>
@@ -27,12 +27,12 @@
 	</div>
 	
 	<div>
-		<p>
 			<img src="cn.png" alt="Chuck Norris">	
+		<p>
 			<a href="https://github.com/marresaurus/mobil">Chuck Norris joke generator </a>
 		</p>
 		<p>
-		Made 2015 in the course "DH2642 Interaction Programming and the Dynamic Web" together with Caroline Lönn, Fredrik Spansk and Axel Hultman. This was the project part of the course, also using the Model-View-Controller framework. I worked mostly with the view and controller using Javascript, HTML and CSS.
+			Made 2015 in the course "DH2642 Interaction Programming and the Dynamic Web" together with Caroline Lönn, Fredrik Spansk and Axel Hultman. This was the project part of the course, also using the Model-View-Controller framework. I worked mostly with the view and controller using Javascript, HTML and CSS.
 		</p>
 	</div>
 	<div>
