--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
+	<div>
 	<div class="nav">
 		<div float="left">
 			<h1>Maria Bahrami</h1>
@@ -21,6 +22,7 @@
 		<p> Under construction, for online portfolio for DM2679 go to 
 			<a href="//marresaurus.github.io/projects.html">Projects</a>
 		</p>
+	</div>
 	</div>
 </body>
 </html>
